# bumblebee

azores_republisher/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
azores_republisher/src/: convert_images.cpp~
bumblebee1394/: CMakeLists.txt  bumblebee1394_nodelet.xml  manifest.xml
bumblebee1394/calib_data/: azores_XB3_CR_center.yaml  azores_XB3_CR_right.yaml  azores_XB3_LC_center.yaml  azores_XB3_LC_left.yaml  azores_XB3_LR_left.yaml  azores_XB3_LR_right.yaml  azores_XB3_center.yaml  azores_XB3_left.yaml  azores_XB3_right.yaml  bumblebee2_left.yaml  bumblebee2_right.yaml  bumblebeeXB3_center.yaml  bumblebeeXB3_left.yaml  bumblebeeXB3_right.yaml  norm_XB3_LR_left.yaml  norm_XB3_LR_right.yaml
bumblebee1394/cfg/: Bumblebee1394.cfg  Bumblebee1394.cfgc
bumblebee1394/docs/: Bumblebee1394Config-usage.dox  Bumblebee1394Config.dox  Bumblebee1394Config.wikidoc
bumblebee1394/src/nodes/: CMakeLists.txt  dev_bumblebee1394.cpp  dev_bumblebee1394.h  driver1394.cpp  driver1394.h  features.cpp  features.h  format7.cpp  format7.h  nodelet.cpp
launch/: bumblebee.yaml  bumblebee_stereo_bak.yaml  camera_capture.launch  nodelet_azores_cpu.launch  nodelet_azores_cpu_bak.launch
opencv_image_proc/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
opencv_image_proc/cfg/: Disparity.cfgc  Disparity.cfg~  DisparityClahe.cfg  DisparityClahe.cfgc  DisparityShort.cfg  DisparityShort.cfgc  DisparityWide.cfgc  DisparityWide.cfg~
opencv_image_proc/docs/: DisparityClaheConfig-usage.dox  DisparityClaheConfig.dox  DisparityClaheConfig.wikidoc  DisparityConfig.dox  (+2 more)
(+27 files in other folders)
